Add map component and fix bug for back-end controller

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,3 +4,54 @@ header {
 	width: 100%;
 	margin: auto;
 }
+
+main .weather {
+	width: 600px;
+	margin: auto;
+	border: 1px solid rgba(0, 0, 0, 0.6);
+}
+
+main .weather .day .item .info .left {
+	width: 300px;
+	align-items: center;
+	font-size: 35pxs;
+}
+
+main .weather .day .item .info .right {
+	width: 300px;
+}
+
+main .weather .day .item .days .item {
+	display: flex;
+	width: 100px;
+	padding: 10px 20px;
+	margin-left: 5px;
+	justify-content: center;
+	border: 1px solid transparent;
+	transition: all 1s;
+	cursor: pointer;
+	margin: auto;
+}
+
+main .weather .day .item .days .item:hover, main .weather .day .item .days .item:active {
+	border: 1px solid rgba(0, 0, 0, 0.6);
+}
+
+.map {
+	width: 600px;
+	margin: auto;
+}
+
+.map agm-map {
+	height: 400px;
+}
+
+.column {
+	display: flex;
+	flex-direction: column;
+}
+
+.row {
+	display: flex;
+	flex-direction: row;
+}
