--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,8 @@
     <main>
         <app-weather></app-weather>
     </main>
+    <app-map></app-map>
+   <!--  <script src="http://maps.googleapis.com/maps/api/js"></script> -->
 </body>
+
+
