--- a/src/app/form/app.form.html
+++ b/src/app/form/app.form.html
@@ -1,5 +1,5 @@
 <header>
     <input type="search" placeholder="City" name = "city" [(ngModel)]="city">
     <input type="date" placeholder="Date"  name = "date" [(ngModel)]="date">
-    <div class="btn send" (click)="send()">Send</div>
+    <div class="btn send" (click)="Send()">Send</div>
 </header>
