--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,6 @@
-<body>
+<div class="app">
+    <div class="title">Weather by <span>@Dulce</span></div>
     <app-form></app-form>
-    <main>
-        <app-weather></app-weather>
-    </main>
     <app-map></app-map>
-   <!--  <script src="http://maps.googleapis.com/maps/api/js"></script> -->
-</body>
-
-
+    <app-weather></app-weather>
+</div>
