--- a/src/app/scss/app.component.scss
+++ b/src/app/scss/app.component.scss
@@ -1,62 +1,23 @@
-header{
-    display:flex;
-    max-width: 600px;
-    width: 100%;
+body{
+    padding: 0px;
+    margin:0px;
+}
+
+.form{
+    display: flex;
+    width: 1200px;
     margin: auto;
 }
 
-main{
+.wraper{
+    width: 1200px;
+    margin: auto;
     .weather{
+        display: flex;
         width: 600px;
-        margin:auto;
-        border:1px solid rgba(0,0,0,0.6);
-        .day{
-            .item{
-                .wraper{
-
-                }
-                .info{
-                    .left{
-                        width:300px;
-                        align-items: center;
-                        font-size: 35pxs;
-                    }
-                    .right{
-                        width:300px;
-                    }
-                }
-                .days{
-                    .item{
-                        display: flex;
-                        width: 100px;
-                        padding:10px 20px;
-                        margin-left: 5px;
-                        justify-content: center;
-                        border:1px solid transparent;
-                        transition:all 1s;
-                        cursor:pointer;
-                        margin: auto;
-                        &:hover,&:active{
-                            border:1px solid rgba(0,0,0,0.6);
-                        }
-                    }
-                }
-            }
-        }
     }
-}
-.map{
-    width: 600px;
-    margin: auto;
-    agm-map{
-        height: 400px;
+    .map{
+        display: flex;
+        width: 600px;
     }
-}
-.column{
-    display: flex;
-    flex-direction: column;
-}
-.row{
-    display: flex;
-    flex-direction: row;
 }
