--- a/src/app/map/app.map.html
+++ b/src/app/map/app.map.html
@@ -1,3 +1,3 @@
 <div class="map">
-    <agm-map [latitude]="lat" [longitude]="lng"></agm-map>
+    <agm-map [(latitude)]="lat" [(longitude)]="lng"></agm-map>
 </div>
