--- a/src/app/weather/app.weather.css
+++ b/src/app/weather/app.weather.css
@@ -12,6 +12,7 @@
     box-shadow: 0px 5px 20px rgba(0,0,0,0.05);
     box-sizing: border-box;
     height: 500px;
+    overflow: hidden;
 }
 
 .weather .empty {
