--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body {
+    min-height: 100%;
+}
+body {
+	padding: 0px;
+    margin: 0px;
+    background-color: #eee;
+}
